--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!-- Author: Michael John Montano -->
 <!-- 1st - 11th Sprint Update: N/A -->
 <!-- 12th Sprint Update: 09/10/2024 (Deadline: 09/15/2024)-->
+    <!-- 09/13/2024 Update: Working on the rest of Section 1 and updating "My Results" table-->
 
 <!DOCTYPE html>
 <html>
@@ -18,8 +19,50 @@
 <br>
 <table id="table1"><tr><th><img src="diagramfinal.png" alt="MBTI Diagram" class="badge"></th></tr></table>
 <table id="table2"><tr><th><img src="diagram6.png" alt="MBTI Diagram" class="badge1"></th><th><img src="quote.jpg" alt="Quote" class="badge2"></th></tr></table>
-<br><br><div class="logo">Understanding Personality Types at Work (Robin Hills)</div><br>
+<br><br>
+<div class="logo">My Results</div>
 <table id="table3">
+    <tr><th>Question</th><th>Answer</th><th>Question</th><th>Answer</th></tr>
+    <tr><td>At a social event, do you...</td><td>Interact with a few people known to you</td><td>Do new interactions with others...</td><td>Stimulate and energise you</td></tr>
+    <tr><td>Are you more...</td><td>Realistic</td><td>Are you more frequently...</td><td>A practical person</td></tr>
+    <tr><td>Are you usually...</td><td>Fair minded</td><td>Which are you drawn to?</td><td>Accurate perception</td></tr>
+    <tr><td>Do you tend to be more...</td><td>Dispassionate</td><td>Which is more satisfying?</td><td>To discuss an issue thoroughly</td></tr>
+    <tr><td>Do you prefer to work..</td><td>To deadlines</td><td>Which rules you more?</td><td>Your head</td></tr>
+    <tr><td>Do you tend to make choices...</td><td>Rather carefully</td><td>Are you more more comfortable with work that is...</td><td>Done on a more casual basis</td></tr>
+    <tr><td>Are more interested in...</td><td>Facts</td><td>Do you prefer...</td><td>A few friends with longer contact</td></tr>
+    <tr><td>At social events, do you...</td><td>Stay late with increasing energy</td><td>Are you drawn more towards...</td><td>Substantial information</td></tr>
+    <tr><td>Are you more of a...</td><td>Sensible person</td><td>Are you more interested in...</td><td>Production</td></tr>
+    <tr><td>Are you drawn more towards...</td><td>Hard data</td><td>Are you more comfortable with being...</td><td>Objective</td></tr>
+    <tr><td>Is it more natural for you to be...</td><td>Nice to others</td><td>Do you value yourself to be more...</td><td>Devoted</td></tr>
+    <tr><td>When you meet people for the first time, are you...</td><td>Personal and engaging</td><td>Which statements are you most comfortable with?</td><td>Final statements</td></tr>
+    <tr><td>With regards to keeping an appointment, are you...</td><td>Punctual</td><td>Are you more comfortable...</td><td>After a decision has been made</td></tr>
+    <tr><td>Which bothers you more? Having things...</td><td>Incomplete</td><td>Do you...</td><td>Find little to say to strangers</td></tr>
+    <tr><td>With groups of friends, do you...</td><td>Get behind with the news</td><td>Are you more interested in...</td><td>A specific instance</td></tr>
+    <tr><td>Are you more interested in...</td><td>Concepts</td><td>Do you feel...</td><td>More creative than practical</td></tr>
+    <tr><td>Do you prefer writers to...</td><td>Use lots of analogies</td><td>Are you drawn more towards...</td><td>Fundamentals</td></tr>
+    <tr><td>Are you naturally more...</td><td>Compassionate</td><td>In making judgements, are you usually more...</td><td>Neutral</td></tr>
+    <tr><td>In making judgement, are you more like to be...</td><td>Impersonal</td><td>Do you consider yourself to be more...</td><td>Clear headed</td></tr>
+    <tr><td>Do you usually...</td><td>Settle things</td><td>Are you more inclined to...</td><td>Schedule events</td></tr>
+    <tr><td>Are you usually rather...</td><td>Quick to agree on a specific time</td><td>Are you a person who is more disposed to...</td><td>Work to a routine</td></tr>
+    <tr><td>When phoning someone, do you...</td><td>Rehearse what you are going to say</td><td>Are you more inclined to be...</td><td>Easy to approach</td></tr>
+    <tr><td>Facts...</td><td>Usually require interpretation</td><td>Do you have more fun with...</td><td>Hands on experience</td></tr>
+    <tr><td>Do you prefer to work with...</td><td>Practical information</td><td>With the written word, do you prefer it to be...</td><td>More literal</td></tr>
+    <tr><td>Are you inclined to be more...</td><td>Cool and level headed</td><td>Are you usually more...</td><td>Unbiased</td></tr>
+    <tr><td>Would you rather be...</td><td>More merciful than just</td><td>Are you typically more...</td><td>Lenient than just</td></tr>
+    <tr><td>Are you comfortable...</td><td>Setting a schedule</td><td>Are you more likely to...</td><td>Delay making judgments</td></tr>
+    <tr><td>Are you comfortable with...</td><td>Written agreements</td><td>Do you tend to be more...</td><td>Deliberate than spontaneous</td></tr>
+    <tr><td>In groups of people, do you...</td><td>Wait to be approached</td><td>Are you typically more a person of...</td><td>Clear reason</td></tr>
+    <tr><td>Traditional common sense is...</td><td>Usually trustworthy</td><td>Are you inclined to be more...</td><td>Fair minded</td></tr>
+    <tr><td>Children often don't...</td><td>Daydream enough</td><td>Mostly, is it preferable to...</td><td>Make sure that things are arranged</td></tr>
+    <tr><td>Are you usually more...</td><td>Tender hearted</td><td>Is it more in your nature to...</td><td>Get things settled</td></tr>
+    <tr><td>Are you more...</td><td>Gentle than firm</td><td>When the phone rings, do you...</td><td>Try to get to it first</td></tr>
+    <tr><td>Are you more inclined to want arrangements to be...</td><td>Well organized</td><td>What do you value most in yourself?</td><td>To have a good sense of reality</td></tr>
+    <tr><td>What do you value more? Something that is...</td><td>Definite</td><td>Do you prefer things to be...</td><td>Neat and orderly</td></tr>
+    <tr><th colspan="4"><img src="score1.png" alt="Score Sheet"><br><img src="score.png" alt="Score"></th></tr>
+    <tr><th colspan="4">To know more, view this <a href="ISTJ.pdf" target="_blank">ISTJ Report</a>.</th></tr>
+</table>
+<br><br><div class="logo">Understanding Personality Types at Work (Robin Hills)</div><br>
+<table id="table4">
     <tr><th>SECTION 1: UNDERSTANDING PERSONALITY TYPES AT WORK - COURSE INTRODUCTION</th></tr>
     <tr><th>Introduction to Understanding Personality Types at Work</th></tr>
     <tr><td>Knowing more about your unique personality can help you understand yourself better and make changes in your life that will make you more confident and successful.
@@ -33,16 +76,53 @@
         <br><br><img src="preferences.png" alt="Four Preferences">
         <br><br>Understanding how the preferences are expressed will give you insights into how your own strengths and limitations, and those of other people work. This will help you to understand how to engage with people better.
     </td></tr>
-    <tr><th></th></tr>
+    <tr><th>Activity Booklet: Reflecting about this Personality Course</th></tr>
+    <tr><td>Understanding more about personality will help you to predict how people will respond to certain situations and the sorts of things they prefer and value.
+        <br><br>Understanding your personality and yourself better will help you gain greater insights into your behaviour and your emotional well-beings.
+        <br><br>Your personality is what makes you who you are. It is often thought of as something that arises from within the individual and remains fairly consistent throughout life.
+        <br><br>Personality encompasses all of the thoughts, behavior patterns and social attitudes that impact upon how you view yourself and what you believe about others and the world around you.
+        <br><br><br>Knowing more about your personality will help you to understand:
+        <br>Your strengths and weaknesses
+        <br>Your likes and dislikes
+        <br>Which situations allow you to perform at your best
+        <br>Other people better
+    </td></tr>
+    <tr><th>The Challenges of Self-Awareness and Emotional Intelligence</th></tr>
+    <tr><td><img src="challenges.png" alt="The Challenges of Self-Awareness and Emotional Intelligence">
+        <br><br><b>Self-Awareness</b> - cornerstone of emotional intelligence
+        <br><br>If you are a leader/ coach working with others to help them reach their true potential, you may be surprised at the negative reactions that you encounter from time to time.
+        <br><br>Discovering your true authentic self can be a daunting task.
+        <br><br>Learning about yourself by increasing your self-awareness is often a difficult process and can be challenging for a variety of reasons.
+        <br><br>Human psyche is intricate and multifaceted - understanding your thoughts, emotions and motivations can be challenging due to the the intricacies and depth of the self.
+        <br><br>Can be a complex and nuanced process, and so lack of guidance around working with it can be an issue.
+        <br><br>Many people struggle to know where to start or how to navigate their inner world effectively.
+        <br><br><br><b>Fear of Self-Reflection</b> - some people may have a fear of what they will discover about themselves
+        <br><br>Worries that they’ll uncover unpleasant truths or confront difficult emotions
+        <br><br>Experiences from the past can lead to emotional trauma that can make it harder for some to access certain parts of their psyche
+        <br><br><br><b>Defense Mechanisms</b> - protect themselves from any uncomfortable thoughts and feelings
+        <br><br>Includes denial or rationalisation, and being overtly critical of others to place blame upon them
+        <br><br><br><b>Lack of Time, Motivation, & Prioritisation</b>  in our fast paced world, many people are constantly busy and may not prioritise self-awareness or self-reflection, feeling that they don’t have the time to engage in introspection
+        <br><br>External stimuli, such as technology, work demands and social media can be a more pleasant distraction
+        <br><br><br><b>Emotional Avoidance</b> - some people have difficulty dealing with their emotions; they may suppress them or ignore their feelings rather than exploring them
+        <br><br><br><b>Ego and Self-Image</b> - a strong ego or attachment to a particular self image can make it challenging to acknowledge and accept aspects of yourself that don’t align with that image
+        <br><br>Admitting flaws or vulnerabilities can be difficult for the ego
+        <br><br><br><b>Resistance to Change</b> - some people may resist change even if it’s positive because they feel uncomfortable or it’s unfamiliar to them
+        <br><br><br><b>Cognitive Biases</b> - such as confirmation bias, seeking information that confirms existing beliefs, or the Dunning-Kruger Effect overestimating one’s abilities, can distort self-perception and hinder self-awareness
+        <br><br>Overcoming these challenges often requires patience, practice, and willingness to engage in self exploration
+    </td></tr>
+    <tr><th>Working with Personality Types</th></tr>
+    <tr><td>
+        
+    </td></tr>
 </table><br>
 <table id="table99">
     <tr><th>Supporting Documents</th></tr>
-    <tr><td><a href="Determine+your+Behavioural+Preferences.pdf" target="blank">Determine Your Behavioural Preferences</a>
-        <br><a href="Learning+Review.pdf" target="blank">Learning Review</a>
-        <br><a href="Personality+Type+Indicator.pdf" target="blank">Personality Type Indicator</a>
-        <br><a href="Reflecting+on+this+Personality+Course.pdf" target="blank">Reflecting on this Personality Course</a>
-        <br><a href="Working+with+Type+Workbook.pdf" target="blank">Working with Type Workbook</a>
-        <br><a href="Your+Personality+Type+and+Leadership+Style.pdf" target="blank">Your Personality Type and Leadership Style</a>
+    <tr><td><a href="Determine+your+Behavioural+Preferences.pdf" target="_blank">Determine Your Behavioural Preferences</a>
+        <br><a href="Learning+Review.pdf" target="_blank">Learning Review</a>
+        <br><a href="Personality+Type+Indicator.pdf" target="_blank">Personality Type Indicator</a>
+        <br><a href="Reflecting+on+this+Personality+Course.pdf" target="_blank">Reflecting on this Personality Course</a>
+        <br><a href="Working+with+Type+Workbook.pdf" target="_blank">Working with Type Workbook</a>
+        <br><a href="Your+Personality+Type+and+Leadership+Style.pdf" target="_blank">Your Personality Type and Leadership Style</a>
     </td></tr>
 </table>
 </body>
